@@ -1,3 +1,12 @@
+2005-06-12  Christophe Rhodes  <csr21@cam.ac.uk>
+
+	* swank.lisp (ed-in-emacs): allow strings as well as pathnames;
+	don't call emacs for things that the emacs editor doesn't know how
+	to deal with.  Return T if we called emacs and NIL if not.
+
+	* slime.el (slime-ed): Change a listp to consp, so that NIL
+	arguments are correctly handled.
+
 2005-06-11  Nikodemus Siivola <nikodemus@random-state.net>
 
 	* swank-sbcl.lisp: Patched for SBCL HEAD: utilize the new
